--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ethers": "^5.7.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4",
