--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "ethers": "^5.7.2",
+    "jsqr": "^1.4.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
